# aqea-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.github/workflows/: release.yml
core/: Cargo.toml
core/examples/: auto_train_gist.rs
core/src/: cmaes.rs  compression.rs  constants.rs  decompression.rs  energy.rs  lib.rs  metrics.rs  pipeline.rs  pq.rs  prequantify.rs  quantization.rs  search.rs  weights_binary.rs
core/src/training/: auto_trainer.rs  config.rs  early_stopping.rs  mod.rs  progressive.rs  report.rs  splitter.rs
core/src/training/loader/: aqed.rs  json.rs  mod.rs
core/src/training/sampling/: kmeans.rs  mod.rs  random.rs  tsne_grid.rs
docs/: USAGE.md
src/: auth.rs  config.rs  csv_support.rs  main.rs  test_data.rs  validate.rs
src/repl/: commands.rs  handler.rs  mod.rs
