[workspace]
members = ["core"]

[package]
name = "aqea"
version = "0.1.0"
edition = "2021"
authors = ["AQEA <hello@aqea.ai>"]
license = "MIT"
description = "AQEA CLI - Compress embeddings up to 3000x"
repository = "https://github.com/nextX-AG/aqea-cli"
homepage = "https://aqea.ai"
readme = "README.md"
keywords = ["embeddings", "compression", "vector", "ai", "machine-learning"]
categories = ["command-line-utilities", "compression"]

[dependencies]
aqea-core = { path = "core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }

# Progress & formatting
indicatif = "0.17"
console = "0.15"

# Interactive REPL
rustyline = "14"
dialoguer = "0.11"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Config file handling
dirs = "5.0"
toml = "0.8"

# CSV support
csv = "1.3"

# For training & benchmarking
chrono = "0.4"
nalgebra = "0.32"
rayon = "1.10"

# Find executables
which = "6.0"

[[bin]]
name = "aqea"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

