[package]
name = "aqea-core"
version = "0.1.0"
edition = "2021"
authors = ["AQEA <hello@aqea.ai>"]
license = "MIT"
description = "AQEA Core - Embedding compression library"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
nalgebra = "0.32"
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
byteorder = "1.5"

[lib]
name = "aqea_core"
path = "src/lib.rs"

