[package]
name = "aqea-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AQEA Compression™ Core - Compression algorithms and weights"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Math
nalgebra = "0.32"
rand = "0.8"
rand_distr = "0.4"

# Binary serialization
byteorder = "1.5"

# Parallel processing (for CMA-ES training)
rayon = "1.10"

[dev-dependencies]
tempfile = "3.14"

[lib]
name = "aqea_core"
path = "src/lib.rs"



